Revision history for {{$dist->name}}

{{$NEXT}}
  - self auth against $c->authz instead of using Clustericious::Plugin::PlugAuth
  - Better tests for case insensitive usernames

0.06      2012-12-14 11:41:26 America/New_York
  - Avoid creating extra resources when using /authz/user/... routes
  - Created PlugAuth::Plugin::Test

0.05      2012-12-11 13:56:53 America/New_York
  - handle comments correctly for 'GET /grant'

0.04      2012-12-07 15:41:56 America/New_York
  - fixed /group/:group/#user route for users with @
  - added welcome role (PlugAuth::Role::Welcome)
  - wrote PlugAuth::Guide::Plugin (was a stub)

0.03      2012-12-03 10:43:56 America/New_York
  - wrote PlugAuth::Guide::Client (was a stub)
  - added grant route (GET /grant)

0.02      2012-11-29 15:13:48 America/New_York
  - Added specification tests for Plugins (Test::PlugAuth::Plugin::*)
  - use autodata to support JSON, YAML, whatever, instead of just JSON
  - use temp storage by default if no files are specified in the config
    warn on this sort of usage, as modifications will be lost.
  - Added revoke route (DELETE /grant/...)

0.01      2012-11-13 16:30:06 America/New_York
  - Added documentation in PlugAuth::Guide::*
  - Added roles for plugins (see PlugAuth::Role::*)
  - use Apache MD5 password when creating/changing passwords
  - accept Apache or Unix MD5 encrypted passwords
  - renamed PlugAuth from SimpleAuth
  - /users/:group returns 404 for groups that don't exist
  - POST /group/:group/:user to add a user to a group
  - DELETE /group/:group/:user to remove a user from a group